--- a/KMean_FIFA22.ipynb
+++ b/KMean_FIFA22.ipynb
@@ -24,14 +24,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Gabriel\\AppData\\Local\\Temp\\ipykernel_3724\\1192280948.py:4: DtypeWarning: Columns (25,108) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  players = pd.read_csv(players_file, encoding=\"utf-8\")\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -122,7 +114,7 @@
     "base_path = os.getcwd()\n",
     "players_file = os.path.join(base_path, \"Datos\", \"players_22.csv\")\n",
     "\n",
-    "players = pd.read_csv(players_file, encoding=\"utf-8\")\n",
+    "players = pd.read_csv(players_file, encoding=\"utf-8\",low_memory=False)\n",
     "\n",
     "features = [\"overall\", \"potential\", \"wage_eur\", \"value_eur\", \"age\"]\n",
     "players = players.dropna(subset=features)\n",
@@ -182,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "8f68ee90-b20e-4a2d-9fe3-775deaad4004",
    "metadata": {},
    "outputs": [
